Making ticket lists expand to full width

--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -465,6 +465,10 @@
   display: none;
 }
 
+.fogbugz-helper-fake-kanban-sorted .bug-grid {
+  width: 100%;
+}
+
 .fogbugz-helper-fake-kanban-sorted .bug-grid-row .grid-row-checkbox {
   margin: 0;
 }
