--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -1025,3 +1025,45 @@
 .markdownified tr:nth-child(even) {
   background: #f2f2f2;
 }
+
+  /* //////////////////////////
+ // Add Related Ticket
+////////////////////////// */
+
+section.case .corner.add_related_ticket_done a.case {
+  margin-bottom: 0;
+}
+
+.add_related_ticket_button {
+  text-align: left;
+  color: #39668e;
+  padding: 0;
+  width: 100%;
+
+  -webkit-appearance: none; // iOS
+
+  border-radius: 0;
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  font: inherit;
+}
+
+.add_related_ticket_link,
+.add_related_ticket_button {
+  margin: 1em 0;
+  white-space: nowrap;
+  display: block;
+  font-weight: bold;
+}
+
+.add_related_ticket_button&::-moz-focus-inner { 
+  border: 0;
+  padding: 0;
+  margin: 0;
+}
+
+.add_related_ticket_button:focus,
+.add_related_ticket_button:hover {
+  text-decoration: underline;
+}
