--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -1226,19 +1226,21 @@ section.case .corner.add_related_ticket_done a.case {
  // Add Cancel/Resolve/Reopen Buttons to Edit Ticket Header
 ////////////////////////// */
 
-section.case nav .controls>.control {
-}
-
-section.case nav .controls>.control.cancel {
+section.case nav .controls>.control.save {
   margin-left: 1em;
 }
 
+section.case nav .controls>.control.save .icon,
 section.case nav .controls>.control.cancel .icon {
   vertical-align: bottom;
 }
 
 section.case nav .controls>.control.cancel .icon:before {
   content: "\e628";
+}
+
+section.case nav .controls>.control.save .icon:before {
+  content: "\e612";
 }
 
   /* //////////////////////////
