--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -1380,6 +1380,7 @@ section.case nav .controls>.control.save .icon:before {
   background: #eb3030;
 }
 
+.fogbugz-helper-colorize-statuses #stacking-context-main .status_status,
 .fogbugz-helper-colorize-statuses #stacking-context-main .field.status_helper {
   background: transparent;
   text-shadow: none;
