Making large text inputs monospace when markdown editor is enabled

--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -1059,6 +1059,10 @@
  // Markdown
 ////////////////////////// */
 
+.fogbugz-helper-markdown .customfield-longtext {
+  font-family: monospace;
+}
+
 /* Note: these styles are duplicated in the css */
 
 .markdownified {
