Making only the textarea monospace

--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -1059,7 +1059,7 @@
  // Markdown
 ////////////////////////// */
 
-.fogbugz-helper-markdown .customfield-longtext {
+.fogbugz-helper-markdown .customfield-longtext textarea {
   font-family: monospace;
 }
 
