Fixing og title and removing og image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,10 @@
 		document.documentElement.className = document.documentElement.className.replace(/(^|\s)no-js(\s|$)/, '$1js$2');
 	</script>
 
-	<meta property="og:title" content="About Us | ZipRecruiter"/>
+	<meta property="og:title" content="{{ page.title }} | ZipRecruiter"/>
 	<meta property="og:site_name" content="ZipRecruiter"/>
 	<meta property="og:type" content="website"/>
-	<meta property="og:image" content="/img/ziprecruiter-app-icon-text-512.png"/>
+
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/mobile/chair-icon-72x72-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/mobile/chair-icon-114x114-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" href="/img/chair-icon-57x57-precomposed.png">
