Making long SHA's truncate to not cover other elements on hotfix tickets

--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -1,3 +1,10 @@
+  /* //////////////////////////
+ // Little tweaks
+////////////////////////// */
+label[id="38_SHA"] + .content {
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+}
 
   /* //////////////////////////
  // Preferences
