--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -965,7 +965,8 @@ label[id="38_SHA"] + .content {
     position: fixed;
     left: 0;
     right: 0;
-    width: 100vw;
+    width: 90vw;
+    overflow-x: auto;
   }
 
   /* other */
